# onebuttonpong

./: COPYING  Makefile.am  configure.ac
res/: Makefile.am
res/pixmaps/: title.xpm
snap/: snapcraft.yaml
snap/gui/: onebuttonpong.desktop
src/: Makefile.am  colours.h  enemy.c  enemy.h  game.c  game.h  main.c  sounds.c  sounds.h  text.c  text.h  title.c  title.h
